SEO optimisation and media queries added

--- a/about.html
+++ b/about.html
@@ -16,12 +16,18 @@
 			crossorigin="anonymous"
 		></script>
 		<link rel="stylesheet" href="css/styles.css" />
-		<title>About Katie Morrison</title>
+		<title>About Me - Katie Morrison</title>
+		<meta
+			name="description"
+			content="more about Katie Morrison, a front-end developer based in Sydney"
+		/>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg bg-light fixed-top">
 			<div class="container-fluid navbar-links-container">
-				<a class="navbar-brand" href="index.html">Katie Morrison</a>
+				<a class="navbar-brand" href="index.html" title="Homepage"
+					>Katie Morrison</a
+				>
 				<button
 					class="navbar-toggler hamburger"
 					type="button"
@@ -62,21 +68,21 @@
 					<img
 						class="img-fluid p-2 shadow rounded"
 						src="images/yoga.png"
-						alt=""
+						alt="a woman stands on one leg practicing yoga"
 					/>
 				</div>
 				<div class="col-sm-4">
 					<img
 						class="img-fluid p-2 shadow rounded"
 						src="images/weather.png"
-						alt=""
+						alt="weather app screenshot"
 					/>
 				</div>
 				<div class="col-sm-4">
 					<img
 						class="img-fluid p-2 shadow rounded"
 						src="images/yogurt.png"
-						alt=""
+						alt="a glass bowl of yogurt with blueberries"
 					/>
 				</div>
 			</div>
