--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Katie Morrison</title>
+		<title>Front-end developer - Katie Morrison</title>
+		<meta
+			name="description"
+			content="Katie Morrison is a front-end developer based in Sydney"
+		/>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -21,7 +25,7 @@
 	<body mt-0>
 		<nav class="navbar navbar-expand-lg bg-light fixed-top">
 			<div class="container-fluid navbar-links-container">
-				<a class="navbar-brand" href="index.html">Katie Morrison</a>
+				<a class="navbar-brand" href="/" title="Homepage">Katie Morrison</a>
 				<button
 					class="navbar-toggler hamburger"
 					type="button"
@@ -50,7 +54,12 @@
 			<h3>🇦🇺 Front-end developer, based in Australia</h3>
 		</div>
 		<div class="navigation-links">
-			<a href="about.html#contact" class="contact-link">Contact me</a>
+			<a
+				href="about.html#contact"
+				class="contact-link"
+				title="Contact Katie Morrison"
+				>Contact me</a
+			>
 			<a href="about.html" class="about-link">About me</a>
 		</div>
 		<div class="container">
@@ -58,7 +67,7 @@
 				<div class="col-md-6">
 					<img
 						src="images/yoga.png"
-						alt=""
+						alt="a woman stands on one leg practicing yoga"
 						class="img-fluid rounded d-none d-md-block"
 					/>
 				</div>
@@ -70,7 +79,9 @@
 						eos eveniet alias temporibus deserunt veritatis minima fugiat
 						explicabo eum dolore.
 					</p>
-					<a class="project-link btn" href="#">Launch Yoga App</a>
+					<a class="project-link btn" href="#" title="Launch yoga app"
+						>Launch Yoga App</a
+					>
 				</div>
 			</div>
 
@@ -83,12 +94,17 @@
 						eos eveniet alias temporibus deserunt veritatis minima fugiat
 						explicabo eum dolore.
 					</p>
-					<a class="project-link btn mt-5 mb-5" href="#">Launch Weather App</a>
+					<a
+						class="project-link btn mt-5 mb-5"
+						href="#"
+						title="Launch weather app"
+						>Launch Weather App</a
+					>
 				</div>
 				<div class="col-md-6">
 					<img
 						src="images/weather.png"
-						alt=""
+						alt="weather app screenshot"
 						class="img-fluid rounded d-none d-md-block"
 					/>
 				</div>
@@ -98,7 +114,7 @@
 				<div class="col-md-6">
 					<img
 						src="images/yogurt.png"
-						alt=""
+						alt="a glass bowl of yogurt with blueberries"
 						class="img-fluid rounded d-none d-md-block"
 					/>
 				</div>
@@ -110,7 +126,9 @@
 						eos eveniet alias temporibus deserunt veritatis minima fugiat
 						explicabo eum dolore.
 					</p>
-					<a class="project-link btn" href="#">Launch Yogurt App</a>
+					<a class="project-link btn" href="#" title="Launch yoghurt app"
+						>Launch Yogurt App</a
+					>
 				</div>
 			</div>
 		</div>
