updated link titles

--- a/index.html
+++ b/index.html
@@ -39,11 +39,17 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav">
-						<a class="nav-link active" aria-current="page" href="index.html"
+						<a
+							class="nav-link active"
+							aria-current="page"
+							href="index.html"
+							title="Home"
 							>Home</a
 						>
-						<a class="nav-link" href="about.html">About</a>
-						<a class="nav-link" href="about.html#contact">Contact Me</a>
+						<a class="nav-link" href="about.html" title="About">About</a>
+						<a class="nav-link" href="about.html#contact" title="Contact Me"
+							>Contact Me</a
+						>
 					</div>
 				</div>
 			</div>
@@ -60,7 +66,9 @@
 				title="Contact Katie Morrison"
 				>Contact me</a
 			>
-			<a href="about.html" class="about-link">About me</a>
+			<a href="about.html" class="about-link" title="About Katie Morrison"
+				>About me</a
+			>
 		</div>
 		<div class="container">
 			<div class="row">
