--- a/about.html
+++ b/about.html
@@ -41,11 +41,17 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav">
-						<a class="nav-link active" aria-current="page" href="index.html"
+						<a
+							class="nav-link"
+							aria-current="page"
+							href="index.html"
+							title="Home"
 							>Home</a
 						>
-						<a class="nav-link" href="about.html">About</a>
-						<a class="nav-link" href="about.html#contact">Contact Me</a>
+						<a class="nav-link active" href="about.html" title="About">About</a>
+						<a class="nav-link" href="about.html#contact" title="Contact Me"
+							>Contact Me</a
+						>
 					</div>
 				</div>
 			</div>
@@ -89,7 +95,11 @@
 		</div>
 		<div class="main-titles mt-5" id="contact">
 			<h2>📮 Contact me</h2>
-			<a href="mailto:korpmorrison@gmail.com" class="email-link">
+			<a
+				href="mailto:korpmorrison@gmail.com"
+				class="email-link"
+				title="email Katie Morrison"
+			>
 				korpmorrison@gmail.com
 			</a>
 		</div>
